--- a/udacity-c3-deployment/k8s/aws-secret.yaml
+++ b/udacity-c3-deployment/k8s/aws-secret.yaml
@@ -4,4 +4,4 @@ metadata:
   name: aws-secret
 type: Opaque
 data:
-  credentials: Y3JlZGVudGlhbHMK
+  credentials: L2hvbWUvcGhpbGwvLmF3cy9jcmVkZW50aWFscw==
